# DyLibLang

./: CMakeLists.txt  Cargo.toml  DEV.Dockerfile  Makefile  Package.swift  README.md  binding.gyp  compose-dev.yaml  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.dylib  test.out  tree-sitter.json
.devcontainer/: devcontainer.json
bindings/c/: tree-sitter-dyliblang.h  tree-sitter-dyliblang.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dyliblang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDyLibLangTests/: TreeSitterDyLibLangTests.swift
cmake/: Findtree-sitter.cmake
src/: grammar.json  main.cpp  node-types.json  parser.c
src/ast/: ASTNode.h  FunctionCallNode.cpp  FunctionCallNode.h  FunctionReference.cpp  FunctionReference.h  FunctionType.cpp  FunctionType.h  LoadLibNode.cpp  LoadLibNode.h  PrintNode.cpp  PrintNode.h  TypeNode.cpp  TypeNode.h  UnloadNode.cpp  UnloadNode.h  ValueNode.cpp  ValueNode.h  VariableNode.cpp  VariableNode.h
