[package]
name = "tree-sitter-dyliblang"
description = "Parser for DyLibLang language"
version = "0.0.0"
authors = ["Dmytro Hubatenko <gubatenkod@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "dyliblang"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/prizrak1609/dyliblang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.5"
